# handlers/accounts.go
@@ -48,10 +48,6 @@ func (s *Accounts) Details() http.Handler {
 	return http.HandlerFunc(s.DetailsFunc)
 }
 
-func (s *Accounts) ActivateArtist() http.Handler {
-	return http.HandlerFunc(s.ActivateArtistFunc)
-}
-
-func (s *Accounts) EnableCommunityPool() http.Handler {
-	return http.HandlerFunc(s.EnableCommunityPoolFunc)
+func (s *Accounts) RotateKey() http.Handler {
+	return http.HandlerFunc(s.RotateKeyFunc)
 }
